Add service template

--- a/charts/llm-gateway/templates/deployment.yaml
+++ b/charts/llm-gateway/templates/deployment.yaml
@@ -28,6 +28,9 @@ spec:
         - name: {{ .Chart.Name }}
           image: "{{ .Values.image.repository }}:{{ .Values.image.tag }}@{{ .Values.image.digest }}"
           imagePullPolicy: {{ .Values.image.pullPolicy }}
+          env:
+            - name: PORT
+              value: "{{ .Values.port }}"
           {{- if or .Values.envConfig .Values.envSecret }}
           envFrom:
             {{- if .Values.envConfig }}
@@ -39,3 +42,7 @@ spec:
                 name: {{ include "llm-gateway.fullname" . }}-secret
             {{- end }}
           {{- end }}
+          ports:
+            - name: http
+              containerPort: {{ .Values.port }}
+              protocol: TCP
