--- a/charts/llm-gateway/templates/service.yaml
+++ b/charts/llm-gateway/templates/service.yaml
@@ -11,6 +11,6 @@ spec:
     {{- include "llm-gateway.selectorLabels" . | nindent 4 }}
   ports:
     - name: http
-      port: {{ .Values.port }}
-      targetPort: {{ .Values.port }}
+      port: {{ .Values.envConfig.PORT }}
+      targetPort: {{ .Values.envConfig.PORT }}
       protocol: TCP
