--- a/charts/llm-gateway/values.yaml
+++ b/charts/llm-gateway/values.yaml
@@ -8,7 +8,7 @@ envSecret: {}
 litellmConfig: {}
 
 image:
-  repository: albe83/llm-gw
+  repository: albe83/llm-gateway
   tag: v0.0.6
   digest: sha256:517933f26f912ccfdb1dcd5d7279816f92340085a98cbbbfe8f8a099f83ac43
   pullPolicy: IfNotPresent
